fix(styles): text contrast ratio

--- a/components/weather-card/weather-card.module.scss
+++ b/components/weather-card/weather-card.module.scss
@@ -22,7 +22,7 @@
 .description {
   margin: 1em 0;
   font-size: 1em;
-  color: #999;
+  color: #646464;
 }
 
 .value {
